--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         }
     ],
     "require": {
-        "php": ">=5.5.9"
+        "php": ">=5.5.9",
+        "doctrine/dbal": "~2.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8|^5.0"
